--- a/comlec_front/src/assets/main.css
+++ b/comlec_front/src/assets/main.css
@@ -7,6 +7,8 @@
   margin: 0 auto;
   font-weight: normal;
   overflow: none;
-  height: 100vh;
+  min-height: 100vh;
+  min-width: 600px;
+  padding-bottom: 5rem;
   background-color: rgb(204, 204, 204);
 }
