--- a/comlec_front/src/assets/main.css
+++ b/comlec_front/src/assets/main.css
@@ -12,3 +12,20 @@
   padding-bottom: 5rem;
   background-color: rgb(204, 204, 204);
 }
+
+
+.fs-7 {
+  font-size: 15px;
+}
+
+.fs-8 {
+  font-size: 13px;
+}
+
+.fs-9 {
+  font-size: 11px;
+}
+
+.fs-10 {
+  font-size: 9px;
+}
